--- a/tasks/rsp/server/app/package.json
+++ b/tasks/rsp/server/app/package.json
@@ -12,6 +12,7 @@
   ],
   "dependencies": {
     "express": "~4.16.1",
+    "express-ws": "^4.0.0",
     "seedrandom": "^3.0.5",
     "ws": "^7.2.3"
   }
