--- a/tasks/rsp/server/nginx.conf
+++ b/tasks/rsp/server/nginx.conf
@@ -12,5 +12,6 @@ server { # rsp
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+        proxy_read_timeout 300s;
     }
 }
