--- a/tasks/tea-for-teacher/server/docker-compose.yml
+++ b/tasks/tea-for-teacher/server/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3"
 
 services:
-  storage:
+  tea-for-teacher:
     build: .
     ports:
-      - 9999:80
-
+      - 127.0.0.1:33021:80
+    restart: always
