--- a/tasks/marks/server/docker-compose.yml
+++ b/tasks/marks/server/docker-compose.yml
@@ -26,3 +26,10 @@ services:
       - ./docker_config/nginx/conf:/etc/nginx/conf.d
     depends_on:
       - marks
+    environment:
+      - VIRTUAL_HOST=marks.ctf.sicamp.ru
+    networks:
+      - proxy
+networks:
+  proxy:
+    external: true
