--- a/tasks/marks/server/requirements.txt
+++ b/tasks/marks/server/requirements.txt
@@ -1,12 +1,12 @@
-asgiref==3.2.7
-certifi==2020.4.5.1
-chardet==3.0.4
-Django==3.1.12
-gunicorn==20.0.4
-idna==2.9
-pytz==2019.3
-redis==3.4.1
-requests==2.23.0
-selenium==3.141.0
-sqlparse==0.3.1
-urllib3==1.26.5
+asgiref
+certifi
+chardet
+Django==3
+gunicorn
+idna
+pytz
+redis
+requests
+selenium
+sqlparse
+urllib3
